fixed the animation distortions in exp3 simulation

--- a/src/lab/exp3/simulation/mfs_expt3.css
+++ b/src/lab/exp3/simulation/mfs_expt3.css
@@ -141,7 +141,6 @@ h3{
     width:4%; 
     left:41%; 
     top:6%;  
-    cursor:pointer;
     -ms-transform: rotate(-8deg); /* IE 9 */
     -webkit-transform: rotate(-8deg); /* Chrome, Safari, Opera */
     transform: rotate(-8deg);
@@ -154,7 +153,6 @@ h3{
     left:65%;
     height: 22.5%;
     width: 3.3%;
-    cursor:pointer;
 }
 
 #cuvette{
@@ -164,7 +162,6 @@ h3{
     left:71%;
     height: 22.5%;
     width: 3.3%;
-    cursor:pointer;
 }
 
 #table_with_spec{
@@ -187,7 +184,6 @@ h3{
     height: 26%; 
     left: 49%;
     top: 10%; 
-    cursor: pointer;
 }
 
 #spectrolid_trans_button{
@@ -197,7 +193,6 @@ h3{
     height: 18%;
     left: 35%; 
     top: 20%;  
-    cursor: pointer;
 }
 
 #spectrolid_trans_button1{
@@ -207,7 +202,6 @@ h3{
     height: 18%;
     left: 36%; 
     top: 4%;  
-    cursor: pointer;
 }
 
 #reference{
@@ -216,7 +210,6 @@ h3{
     width: 15%;
     left: 54%;
     top: -14%;
-    cursor: pointer;
     visibility: hidden;
 }
 
@@ -225,7 +218,6 @@ h3{
     z-index: 1;
     left: 583px;
     top: -6%;
-    cursor: pointer;
 }
 
 #power_trans_button{
@@ -234,8 +226,7 @@ h3{
     left: 17.3%; 
     top: 44%;
     width: 1.8%;
-    height: 7.5%;
-    cursor: pointer; 
+    height: 7.5%; 
 }
 
 #demo{
@@ -312,7 +303,6 @@ h3{
     width: 3%;
     height: 5%;
     visibility : hidden;
-    cursor: pointer;
 }
 
 #input1{
@@ -361,7 +351,6 @@ h3{
     width: 8%;
     left: 10%;
     top: 565px;
-    cursor: pointer;
     height: 6%;
 }
 
@@ -385,7 +374,6 @@ h3{
     width: 9%;
     height: 5%;
     visibility : hidden;
-    cursor: pointer;
 }
 #select{
     position: absolute;
